# doc-extractor

./: .claudeignore  .gitignore  AGENTS.md  ARCHITECTURE_MAP.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  requirements.txt  run.py
PaytollControl/: AGENTS.md  CHANGELOG.md  CLAUDE.md  run.py  (+3 more)
libs/pdf-pipeline/: .claudeignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
libs/pdf-pipeline/src/pdf_pipeline/: __init__.py
libs/pdf-pipeline/src/pdf_pipeline/abstractions/: __init__.py  data_extractor.py  language_model.py  spreadsheet_reader.py
libs/pdf-pipeline/src/pdf_pipeline/config/: settings.py
libs/pdf-pipeline/src/pdf_pipeline/core/: excel_pipeline.py  pipeline.py
libs/pdf-pipeline/src/pdf_pipeline/implementations/: csv_cost_logger.py  line_remover.py  llm_schema_detector.py  openpyxl_reader.py
libs/pdf-pipeline/tests/unit/: test_csv_cost_logger.py  test_excel_pipeline.py  test_feature_registry.py  test_file_cache_manager.py  test_json_status_tracker.py  test_llm_schema_detector.py  test_preparation_pipeline.py
projects/payroll-control/: .claudeignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  conftest.py  pyproject.toml  requirements.txt  run.py
projects/payroll-control/tests/integration/: test_pipeline_integration.py
projects/payroll-control/tests/unit/: test_architecture_boundary.py  test_attendance_extractor.py  test_attendance_mapper.py  test_employment_contract_extractor.py  test_excel_attendance_record_builder.py  test_payslip_extractor.py  test_payslip_mapper.py  test_pension_extractor.py  test_placeholder_extractor.py
(+101 files in other folders)
